--- a/reflection_map.html
+++ b/reflection_map.html
@@ -150,6 +150,71 @@
     }
 </script>
 
+<script id="phong-fs" type="x-shader/x-fragment">
+    precision mediump float;
+
+    uniform float uMaterialShininess;
+    uniform vec3 uAmbientColor;
+    uniform vec3 uPointLightingLocation;
+    uniform vec3 uPointLightingSpecularColor;
+    uniform vec3 uPointLightingDiffuseColor;
+    uniform vec3 uKs;
+
+    varying vec3 vNormal;
+    varying vec4 vPosition;
+    varying vec3 vColor;
+
+    void main(void) {
+
+        float ka = uKs.x;
+        float kd = uKs.y;
+        float ks = uKs.z;
+
+        float specularRefraction = 1.0;
+        vec3 L = normalize(vec3(uPointLightingLocation - vPosition.xyz));
+        vec3 N = normalize(vNormal);
+        vec3 R = normalize(-reflect(L,N));
+        vec3 V = normalize(-vPosition.xyz);
+
+        vec3 ambientColor = uAmbientColor;
+        float cosAngle = max(dot(N, L), 0.0);
+        vec3 diffuseColor = clamp(uPointLightingDiffuseColor * cosAngle, 0.0, 1.0);
+        float cosPhi = max(dot(V, R), 0.0);
+        float shininess = pow(cosPhi, uMaterialShininess);
+        vec3 specularColor = clamp(uPointLightingSpecularColor * shininess, 0.0, 1.0);
+
+        vec3 color = ka * ambientColor + kd * diffuseColor + ks * specularColor;
+        gl_FragColor = vec4(color, 1.0);
+    }
+
+</script>
+
+<script id="phong-vs" type="x-shader/x-vertex">
+    attribute vec3 aVertexPosition;
+    attribute vec3 aVertexNormal;
+
+    uniform mat4 uMVMatrix;
+    uniform mat4 uPMatrix;
+    uniform mat3 uNMatrix;
+    //uniform vec3 uPointLightingLocation;
+    //uniform vec3 uAmbientColor;
+    //uniform float uMaterialShininess;
+    //uniform vec3 uPointLightingSpecularColor;
+    //uniform vec3 uPointLightingDiffuseColor;
+    //uniform vec3 uKs;
+
+    varying vec3 vNormal;
+    varying vec4 vPosition;
+    varying vec3 vColor;
+
+    void main(void) {
+        vPosition = uMVMatrix * vec4(aVertexPosition, 1.0);
+        vNormal = uNMatrix * aVertexNormal;
+        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+    }
+
+</script>
+
 
 <!-- --------------  SCRIPTS ----------------------- -->
 
@@ -804,7 +869,7 @@ function init() {
     }
     document.getElementById("animCheckbox").checked = true;
     document.getElementById("animCheckbox").onchange = doAnimationCheckbox;
-    document.getElementById("object").value = "5";
+    document.getElementById("object").value = "2";
     document.getElementById("object").onchange = function() {
         draw();
         document.getElementById("reset").focus();  // to make sure arrow key input is not sent to popup menu
@@ -836,12 +901,7 @@ function init() {
 
 <p><label><input type="checkbox" id="animCheckbox"> <b>Animate</b></label>
 <label><b>The Reflective Object:</b> <select id="object">
-    <option value="0">Cube</option>
-    <option value="1">Sphere</option>
     <option value="2">Cylinder</option>
-    <option value="3">Cone</option>
-    <option value="4">Torus</option>
-    <option value="5">Teapot</option>
 </select></label>
 <button id="color" onclick="setInterval(genRandomColor, 3000)">Change Color</button>
 <button id="reset">Reset</button>
