--- a/reflection_map.html
+++ b/reflection_map.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<!-- saved from url=(0062)http://math.hws.edu/graphicsbook/source/webgl/cube-camera.html -->
+<!-- 
+authors: Robert Medina and Haley Landon
+ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Disco Simulator</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300i,400" rel="stylesheet">
 <style>
     body {
-        background-color: #DDDDDD;
+        background-color: #efefef;
+        font-family: 'Roboto', sans-serif;
+        color:#6a6a6a;
     }
-    label, button {
-        margin-left: 30px;
+    #motto{
+    	font-style: italic;
+  		font-weight: 300;
     }
+    #headline{
+    	margin-bottom: 10px;
+    }
+    
 </style>
 
 
@@ -213,7 +223,6 @@
 <script src="./reflection_map_files/gl-matrix-min.js"></script>
 <script src="./reflection_map_files/simple-rotator.js"></script>
 <script src="./reflection_map_files/basic-object-models-IFS.js"></script>
-<script src="./reflection_map_files/teapot-model-IFS.js"></script>
 
 <script>
 
@@ -225,7 +234,7 @@ var canvas;
 // To keep the variables organize, the data for each shader program is in an object (created in initGL())
 
 var dataSB;    // Data for the skybox program
-var dataENV;   // Data for environment map program (for the teapot)
+var dataENV;   // Data for environment map program (for the discoball)
 var dataLIT;   // Data for the program with lighting, used for other objects
 
 var projection = mat4.create();   // projection matrix
@@ -236,7 +245,7 @@ var inverseViewTransform = mat3.create();  // The inverse of the view transform 
 var skyboxCube;    // The cube that is rendered to show the skybox.
 var skyboxCubemap; // The static cubemap texture for the skybox, loaded in loadTextureCube()
 
-var dynamicCubemap; // The cubemap texture for the teapot, created dynamically.
+var dynamicCubemap; // The cubemap texture for the discoball, created dynamically.
 var framebuffer;   // A framebuffer for rendering the dynamic cubemap texture that is used on the central reflective object.
 
 var reflectiveObjects;  // models for the central, reflective object
@@ -247,7 +256,7 @@ var movingCubeData;  // An array of objects where each object holds information 
 
 var rotator;   // A SimpleRotator object to enable rotation by mouse dragging.
 
-var rotX = 0, rotY = 0;  // Additional rotations applied as modeling transform to the teapot.
+var rotX = 0, rotY = 0;  // Additional rotations applied as modeling transform 
 
 var cubemapTargets; // For convenience, an array containing the six constants, such as
                     // gl.TEXTURE_CUBE_MAP_POSITIVE_X, that represent the faces of a cubemap texture.
@@ -278,17 +287,11 @@ function draw() {
 
     renderSkyboxAndCubes();  // Draws everything except the central reflective object.
 
-    // Get the inverse of the rotation that was applied to the skybox.
-    // This is needed in the environment map shader to account for the rotation
-    // of the skybox.  (Note that it is passed to the shader in the
-    // teapot's render function.)
-
     mat3.fromMat4(inverseViewTransform, modelview);
     mat3.invert(inverseViewTransform,inverseViewTransform);
 
     // Add modeling rotations to the view transform.
 
-    //mat4.rotateX(modelview,modelview,rotX);
     mat4.translate(modelview,modelview,[0,0,0])
     mat4.rotateY(modelview,modelview,rotY);
     mat4.translate(modelview,modelview,[0.1,0.9,-0.1]);
@@ -619,15 +622,6 @@ function doKey(evt) {
 }
 
 
-/* Creates a program for use in the WebGL context gl, and returns the
- * identifier for that program.  If an error occurs while compiling or
- * linking the program, an exception of type String is thrown.  The error
- * string contains the compilation or linking error.  If no error occurs,
- * the program identifier is the return value of the function.
- *    The second and third parameters are the id attributes for <script>
- * elementst that contain the source code for the vertex and fragment
- * shaders.
- */
 function createProgram(gl, vertexShaderID, fragmentShaderID) {
     function getTextContent( elementID ) {
             // This nested function retrieves the text content of an
@@ -673,11 +667,6 @@ function createProgram(gl, vertexShaderID, fragmentShaderID) {
 }
 
 
-
-/* Initialize the WebGL context.  Called by init().
-   Gets locations for shader program attributes and uniforms, sets the values
-   of uniforms that don't change, and creates the model data for drawing the
-   object in the scene. */
 function initGL() {
 
     cubemapTargets = [  // targets for use in some gl functions for working with cubemaps
@@ -757,10 +746,6 @@ function initGL() {
         gl.texImage2D(cubemapTargets[i], 0, gl.RGBA, 512, 512, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
             //With null as the last parameter, the previous function allocates memory for the texture and fills it with zeros.
     }
-    //gl.texParameteri(gl.TEXTURE_CUBE_MAP, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-         // The previous line would sets the minification filter to gl.LINEAR so we wouldn't neet mipmaps,
-         // but the quality of the reflections was significantly improved by using mipmpaps.
-         // Even though the mipmaps have to be computed in every frame, it seems worth it.
 
     framebuffer = gl.createFramebuffer();  // crate the framebuffer that will draw to the reflection map
     gl.bindFramebuffer(gl.FRAMEBUFFER,framebuffer);  // select the framebuffer, so we can attach the depth buffer to it
@@ -768,8 +753,6 @@ function initGL() {
     gl.bindRenderbuffer(gl.RENDERBUFFER, depthBuffer); // so we can create storage for the depthBuffer
     gl.renderbufferStorage(gl.RENDERBUFFER, gl.DEPTH_COMPONENT16, 512, 512);
     gl.framebufferRenderbuffer(gl.FRAMEBUFFER, gl.DEPTH_ATTACHMENT, gl.RENDERBUFFER, depthBuffer);
-        // The same framebuffer will be used to draw all six faces of the cubemap.  Each side will be attached
-        // as the color buffer of the framebuffer while that side is being drawn.
 
     // Check form WebGL errors (since I'm not sure all platforms will be able to create the framebuffer)
     if (gl.getError() != gl.NO_ERROR) {
@@ -847,21 +830,14 @@ function init() {
 <body onload="init()" data-pinterest-extension-installed="cr2.0.5" style="margin:auto;">
 
 <h2 id="headline">Disco Simulator</h2>
+<p id="motto">A virtual disco experience</p>
 
 <noscript>&lt;hr&gt;&lt;h3&gt;This page requires Javascript and a web browser that supports WebGL&lt;/h3&gt;&lt;hr&gt;</noscript>
 
-<p>
-
-
-
-</p><div id="canvas-holder">
+<div id="canvas-holder">
 
     <canvas width="700" height="700" id="webglcanvas"></canvas>
 
 </div>
-
-
-
-
 
 </body></center></html>
